--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/andrepolischuk/inferno-redux-example.git"
   },
-  "author": "Andrey Polischuk <andre.polischuk@gmail.com>",
+  "author": "Andrey Polischuk <me@andrepolischuk.com> (https://andrepolischuk.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/andrepolischuk/inferno-redux-example/issues"
